--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,10 @@ dependencies {
     // view model
     implementation "android.arch.lifecycle:extensions:$rootProject.lifecycle"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.lifecycle"
+
+    //Face Stetho Chrome debug
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 }
 
 configurations.all {
